# traz

./: .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  RELEASE_PLAN.md  SECURITY.md  SKILL.md  dist-workspace.toml  vercel.json
.agents/: mcp_config.json
.gemini/: settings.json
.github/workflows/: ci.yml  release.yml
crates/hf-hub/: .cargo_vcs_info.json  Cargo.toml
crates/hf-hub/src/api/: sync.rs  tokio.rs
crates/traz-api/: Cargo.toml
crates/traz-api/src/: lib.rs  server.rs
crates/traz-cli/: Cargo.toml
crates/traz-cli/src/: banner.rs  cli.rs  cuby.rs  display.rs  main.rs
crates/traz-core/: Cargo.toml
crates/traz-core/src/: config.rs  errors.rs  event.rs  lib.rs  tokenopt.rs
crates/traz-db/: Cargo.toml
crates/traz-db/src/: database.rs  lib.rs  queries.rs
crates/traz-db/src/queries/: helpers.rs  mod.rs  read.rs  stats.rs  tests.rs  write.rs
crates/traz-db/tests/: snapshot_tests.rs
crates/traz-embeddings/: Cargo.toml
crates/traz-embeddings/src/: lib.rs
crates/traz-integrations/: Cargo.toml
crates/traz-integrations/src/: adapters.rs  git.rs  hooks.rs  lib.rs
crates/traz-mcp/: Cargo.toml
crates/traz-mcp/src/: server.rs
crates/traz-tui/: Cargo.toml
crates/traz-tui/src/: app.rs  cuby_tui.rs  diff.rs  input.rs  lib.rs  ui.rs
docs/: AGENT_INTEGRATION.md  ARCHITECTURE.md  MCP_INTEGRATION.md  QUICKSTART.md  USER_GUIDE.md  index.md  package-lock.json  package.json
docs/.vitepress/: config.mjs
docs/.vitepress/theme/: index.js  style.css
docs/components/: TerminalHero.vue
docs/public/: llms.txt
scripts/: traz-shell-hook.bash  traz-shell-hook.zsh
src/: api.rs  cli.rs  db.rs  display.rs  git.rs  main.rs  mcp.rs  models.rs
