[package]
name = "traz"
version = "0.1.0"
edition = "2024"
description = "A shared engineering context layer for AI coding tools"
authors = ["Mithil Girish"]
license = "MIT"
repository = "https://github.com/mithilgirish/traz"
keywords = ["ai", "developer-tools", "mcp", "context", "cli"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.4", features = ["derive"] }
dirs = "5.0"
rusqlite = { version = "0.31", features = ["bundled", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.37", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
axum = "0.7"
tower-http = { version = "0.5", features = ["trace", "cors"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
