[workspace]
resolver = "2"
members = [
    "crates/traz-core",
    "crates/traz-db",
    "crates/traz-cli",
    "crates/traz-api",
    "crates/traz-mcp",
    "crates/traz-integrations",
    "crates/traz-tui",
    "crates/traz-embeddings",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Mithil Girish"]
license = "MIT"
repository = "https://github.com/mithilgirish/traz"
homepage = "https://traz.mithilgirish.dev"
description = "A local-first engineering memory layer and MCP server for AI coding tools"
keywords = ["mcp", "ai", "claude", "llm", "context"]
categories = ["development-tools", "command-line-utilities"]

[workspace.dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.4", features = ["derive"] }
ctrlc = "3.4"
dirs = "5.0"
libsql = { version = "0.6.0", default-features = false, features = ["core"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.37", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
axum = "0.7"
tower-http = { version = "0.5", features = ["trace", "cors"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
toml = "0.8"
fastembed = "5"
# Internal crates
traz-core = { path = "crates/traz-core" }
traz-db = { path = "crates/traz-db" }
traz-api = { path = "crates/traz-api" }
traz-mcp = { path = "crates/traz-mcp" }
traz-integrations = { path = "crates/traz-integrations" }
traz-embeddings = { path = "crates/traz-embeddings" }
traz-tui = { path = "crates/traz-tui" }
dialoguer = "0.12.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[patch.crates-io]
hf-hub = { path = "crates/hf-hub" }
