[package]
name = "traz-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Local REST API server for traz"

[dependencies]
traz-core = { workspace = true }
traz-db = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
