[package]
name = "traz-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "CLI binary for traz"

[[bin]]
name = "traz"
path = "src/main.rs"

[dependencies]
traz-core = { workspace = true }
traz-db = { workspace = true }
traz-api = { workspace = true }
traz-mcp = { workspace = true }
traz-integrations = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
ctrlc = { workspace = true }
dirs = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
