[package]
name = "traz"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "A local-first engineering memory layer and MCP server for AI coding tools"
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "traz"
path = "src/main.rs"

[dependencies]
traz-core = { workspace = true }
traz-db = { workspace = true }
traz-api = { workspace = true }
traz-mcp = { workspace = true }
traz-integrations = { workspace = true }
traz-tui = { workspace = true }
traz-embeddings = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
ctrlc = { workspace = true }
dirs = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dialoguer = { workspace = true }

[dev-dependencies]
tempfile = "3.27.0"
