[package]
name = "traz-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core types and models for the traz engineering context layer"

[dependencies]
chrono = { workspace = true }
dirs = { workspace = true }
serde = { workspace = true }
serde_json.workspace = true
uuid = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
etoon = "0.6.0"
