[package]
name = "traz-db"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "SQLite storage layer for traz"

[dependencies]
traz-core = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
rusqlite = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
dirs = { workspace = true }
