[package]
name = "traz-db"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "SQLite storage layer for traz"

[dependencies]
traz-core = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
libsql = { workspace = true }
libsql-sys = { version = "0.8.0", features = ["rusqlite"] }
serde_json = { workspace = true }
tracing = { workspace = true }
dirs = { workspace = true }
traz-embeddings = { workspace = true }
tokio = { workspace = true, features = ["rt"] }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros"] }
uuid = { workspace = true, features = ["v4"] }
