[package]
name = "traz-integrations"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Tool integrations for traz (git, claude, cursor)"

[dependencies]
traz-core = { workspace = true }
traz-db = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
