[package]
name = "traz-tui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Interactive terminal timeline explorer dashboard for traz"

[dependencies]
ratatui = "0.30.1"
crossterm = "0.28"
traz-db = { workspace = true }
traz-core = { workspace = true }
traz-integrations = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
